--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,17 +1,14 @@
 name: AWS Monitor
 
 on:
-    schedule:
-        - cron: "*/1 * * * *"   # every 5 minutes for testing
-    
+  schedule:
+    - cron: "*/1 * * * *"   # every minute for testing
 
 jobs:
   monitor:
     runs-on: ubuntu-latest
 
     steps:
-
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
