--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,14 +2,17 @@ name: AWS Monitor
 
 on:
   schedule:
+    # UTC times (IST = UTC + 5:30)
     - cron: "10 4 * * *"   # 9:40 AM IST
     - cron: "10 9 * * *"   # 2:40 PM IST
     - cron: "10 12 * * *"  # 5:40 PM IST
     - cron: "10 17 * * *"  # 10:40 PM IST
-
+  workflow_dispatch:  # Allow manual triggers
+    
 jobs:
   monitor:
     runs-on: ubuntu-latest
+    timeout-minutes: 15  # Prevent hanging workflows
 
     steps:
       - name: Checkout code
@@ -19,15 +22,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: 'pip'  # Cache pip dependencies
 
       - name: Install Google Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo gpg --dearmor -o /usr/share/keyrings/google-linux-signing-keyring.gpg
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-linux-signing-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: stable
 
       - name: Install dependencies
         run: |
@@ -35,6 +35,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run AWS Monitoring
+        timeout-minutes: 10
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -43,3 +44,9 @@ jobs:
           MQTT_USERNAME: ${{ secrets.MQTT_USERNAME }}
           MQTT_PASSWORD: ${{ secrets.MQTT_PASSWORD }}
         run: python monitoring.py
+
+      - name: Notify on failure
+        if: failure()
+        run: |
+          echo "Workflow failed at $(date)"
+          # Add notification logic here if needed
