--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -24,11 +24,6 @@ jobs:
           python-version: "3.11"
           cache: 'pip'  # Cache pip dependencies
 
-      - name: Install Google Chrome
-        uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: stable
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -50,3 +45,18 @@ jobs:
         run: |
           echo "Workflow failed at $(date)"
           # Add notification logic here if needed
+
+  # Optional: Add a job to check workflow health
+  health-check:
+    runs-on: ubuntu-latest
+    needs: monitor
+    if: always()
+    steps:
+      - name: Check workflow status
+        run: |
+          if [ "${{ needs.monitor.result }}" == "failure" ]; then
+            echo "❌ Monitoring job failed"
+            exit 1
+          else
+            echo "✅ Monitoring job succeeded"
+          fi
